versioned_docs/version-4.1.x/reference/functions/Show-ADTBalloonTip.mdx
---
id: Show-ADTBalloonTip
title: Show-ADTBalloonTip
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Displays a balloon tip notification in the system tray.

## SYNTAX

```powershell
Show-ADTBalloonTip [-BalloonTipText] <String> [-BalloonTipIcon <ToolTipIcon>] [-BalloonTipTime <UInt32>]
 [-NoWait] [-Force] -BalloonTipTitle <String> [<CommonParameters>]
```

## DESCRIPTION

Displays a balloon tip notification in the system tray.
This function can be used to show notifications to the user with customizable text, title, icon, and display duration.

For Windows 10 and above, balloon tips automatically get translated by the system into toast notifications.

## EXAMPLES

### EXAMPLE 1

```powershell
Show-ADTBalloonTip -BalloonTipText 'Installation Started' -BalloonTipTitle 'Application Name'
```

Displays a balloon tip with the text 'Installation Started' and the title 'Application Name'.

### EXAMPLE 2

```powershell
Show-ADTBalloonTip -BalloonTipIcon 'Info' -BalloonTipText 'Installation Started' -BalloonTipTitle 'Application Name'
```

Displays a balloon tip with the info icon, the text 'Installation Started', and the title 'Application Name'

## PARAMETERS

### -BalloonTipText

Text of the balloon tip.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -BalloonTipIcon

Icon to be used.
Options: 'Error', 'Info', 'None', 'Warning'.

```yaml
Type: ToolTipIcon
Parameter Sets: (All)
Aliases:
Accepted values: None, Info, Warning, Error

Required: False
Position: Named
Default value: Info
Accept pipeline input: False
Accept wildcard characters: False
```

### -BalloonTipTime

Time in milliseconds to display the balloon tip.
Default: 10000.

```yaml
Type: UInt32
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: 10000
Accept pipeline input: False
Accept wildcard characters: False
```

### -NoWait

Creates the balloon tip asynchronously.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -Force

Creates the balloon tip irrespective of whether running silently or not.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -BalloonTipTitle

Title of the balloon tip.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any output.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Show-ADTBalloonTip](https://psappdeploytoolkit.com/docs/reference/functions/Show-ADTBalloonTip)
